--- a/index.html
+++ b/index.html
@@ -6,52 +6,56 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body class="body">
-    <div class="header">
+    <header class="header">
       <img class="header-img" src="./eisenhower-matrix.jpg">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="main">
-      <p id="add-elem">
-        <label class="label" for="new-task">Add Item</label>
+    </header>
+    <main class="main">
+      <section id="add-elem">
+        <h1><label class="label" for="new-task">Add Item</label></h1>
         <div class="task-wrapper">
           <input class="input task" id="new-task" type="text">
           <button class="button">Add</button>
         </div>
-      </p>
-      <h3 class="title">Todo</h3>
-      <ul class="tasks-list" id="incomplete-tasks">
-        <li class="tasks-item">
-          <input class="input" type="checkbox">
-          <label class="label task">Pay Bills</label>
-          <input class="input task" type="text">
-          <button class="button edit">Edit</button>
-          <button class="button delete">
-            <img class="tasks-remove" src="./remove.svg">
-          </button>
-        </li>
-        <li class="tasks-item edit-mode">
-          <input class="input" type="checkbox">
-          <label class="label task">Go Shopping</label>
-          <input class="input task" type="text" value="Go Shopping">
-          <button class="button edit">Save</button>
-          <button class="button delete">
-            <img class="tasks-remove" src="./remove.svg">
-          </button>
-        </li>
-      </ul>
-      <h3 class="title">Completed</h3>
-      <ul class="tasks-list" id="completed-tasks">
-        <li class="tasks-item">
-          <input class="input" type="checkbox" checked>
-          <label class="label task">See the Doctor</label>
-          <input class="input task" type="text">
-          <button class="button edit">Edit</button>
-          <button class="button delete">
-            <img class="tasks-remove" src="./remove.svg">
-          </button>
-        </li>
-      </ul>
-    </div>
+      </section>
+      <section>
+        <h2 class="title">Todo</h2>
+        <ul class="tasks-list" id="incomplete-tasks">
+          <li class="tasks-item">
+            <input class="input" type="checkbox">
+            <label class="label task">Pay Bills</label>
+            <input class="input task" type="text">
+            <button class="button edit">Edit</button>
+            <button class="button delete">
+              <img class="tasks-remove" src="./remove.svg">
+            </button>
+          </li>
+          <li class="tasks-item edit-mode">
+            <input class="input" type="checkbox">
+            <label class="label task">Go Shopping</label>
+            <input class="input task" type="text" value="Go Shopping">
+            <button class="button edit">Save</button>
+            <button class="button delete">
+              <img class="tasks-remove" src="./remove.svg">
+            </button>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2 class="title">Completed</h2>
+        <ul class="tasks-list" id="completed-tasks">
+          <li class="tasks-item">
+            <input class="input" type="checkbox" checked>
+            <label class="label task">See the Doctor</label>
+            <input class="input task" type="text">
+            <button class="button edit">Edit</button>
+            <button class="button delete">
+              <img class="tasks-remove" src="./remove.svg">
+            </button>
+          </li>
+        </ul>
+      </section>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
