--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body class="body">
     <header class="header">
-      <img class="header-img" src="./eisenhower-matrix.jpg">
+      <img class="header-img" src="./eisenhower-matrix.jpg" alt="the eisenhower matrix">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main">
@@ -27,7 +27,7 @@
             <input class="input task" type="text">
             <button class="button edit">Edit</button>
             <button class="button delete">
-              <img class="tasks-remove" src="./remove.svg">
+              <img class="tasks-remove" src="./remove.svg" alt="">
             </button>
           </li>
           <li class="tasks-item edit-mode">
@@ -36,7 +36,7 @@
             <input class="input task" type="text" value="Go Shopping">
             <button class="button edit">Save</button>
             <button class="button delete">
-              <img class="tasks-remove" src="./remove.svg">
+              <img class="tasks-remove" src="./remove.svg" alt="">
             </button>
           </li>
         </ul>
@@ -50,7 +50,7 @@
             <input class="input task" type="text">
             <button class="button edit">Edit</button>
             <button class="button delete">
-              <img class="tasks-remove" src="./remove.svg">
+              <img class="tasks-remove" src="./remove.svg" alt="">
             </button>
           </li>
         </ul>
